# local-index

./: .gitignore  .golangci.yml  2025-10-20-i-have-an-idea-for-an-agent-first-codebase-indexin.txt  AGENT_FIRST_CODEBASE_SEARCH_SPEC.md  CLAUDE.md  Cargo.toml  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  cleanup_recommendations.txt  debug_index_content.go  debug_search.go  debug_simple_search.go  debug_text_search.go  fix_duplicates.sh  fix_performance_tests.sh  fix_performance_tests_v2.sh  go.mod  go.sum  performance_recommendations.md  test_enhanced_service.go  test_error_handling.go  test_full_search_flow.go  test_project_detection.go  test_query_analyzer.go
.claude/: settings.local.json
.specify/memory/: constitution.md
benches/: vector_benchmark.rs
docs/: API_REFERENCE.md  DIRECTORY_SELECTION.md  EXAMPLES.md  architecture_decisions.md  validation_report.md
docs/plans/: AGENT_OPTIMIZED_IMPLEMENTATION.md  comprehensive_implementation_plan.md
docs/reviews/: IMPLEMENTATION_REVIEW_PHASES_0_4.md
docs/roadmap/: EMBEDDING_IMPLEMENTATION_PLAN.md  performance_recommendations.md
specs/001-high-performance-local/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-users-should-be/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.go  errors.go  index_cmd.go  lib.rs  main.go  main.rs  search_cmd.go
src/cli/: commands.rs  mod.rs  validation.rs
src/config/: mod.rs
src/filesystem/: mod.rs  scanner.rs  validator.rs  watcher.rs
src/index/: mod.rs
src/lib/: ast_parser.go  binary_storage.go  cache.go  concurrent_index.go  embedding.go  embedding_cache.go  file_filter.go  file_scanner.go  file_watcher.go  fileutils.go  hnsw_index.go  incremental_indexer.go  migration.go  mmap_index.go  model_manager.go  model_metadata.go  parser.go  performance.go  pool.go  project_detector.go  query_analyzer.go  query_analyzer_test.go  storage_manager.go  streaming_processor.go  streaming_scanner.go  streaming_scanner.go.disabled  validation.go  vector_db.go  worker_pool.go
src/models/: code_chunk.go  code_index.go  embeddings.rs  file_entry.go  index.go  manager.rs  mod.rs  registry.rs  search_query.go  search_result.go  search_results.go
src/parsers/: markdown.rs  mod.rs  python.rs  registry.rs  rust.rs
src/search/: engine.rs  mod.rs  vector_index.rs
src/services/: enhanced_search_service.go  indexing_service.go  minilm_service.go  search_service.go
src/storage/: index.rs  metadata.rs  mod.rs  vectors.rs
src/utils/: hash.rs  math.rs  mod.rs  paths.rs  strings.rs
src/validation/: mod.rs  performance.rs  platform.rs
tests/: dogfooding_tests.rs  integration_tests.rs  vector_search_validation.rs
tests/common/: test_utils.go
tests/contract/: test_cli_index_test.go  test_cli_search_test.go  test_directory_validation.go  test_helpers.go  test_index_dir.go  test_search_dir.go
tests/integration/: test_error_scenarios.go  test_final_integration.go  test_helpers.go  test_indexing_integration_test.go  test_multi_project.go  test_project_workflow.go  test_search_integration_test.go
tests/unit/: cli_test.go  fileutils_test.go  migration_test.go  validation_test.go
(+832 files in other folders)
